<resources>
    <string name="app_name">Weather App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="temp">Temp</string>
    <string name="chance_of_rain">Chance of Rain</string>
    <string name="wind_mph">Wind (mph)</string>
    <string name="humididty">Humididty</string>
</resources>