<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="15dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/temp"
        app:layout_constraintRight_toRightOf="@+id/time"
        app:layout_constraintStart_toEndOf="@+id/time"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id ="@+id/space2"
        android:layout_width="15dp"
        android:layout_height="match_parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="@+id/temp"
        app:layout_constraintStart_toEndOf="@+id/temp"
        tools:layout_editor_absoluteY="-73dp" />

    <TextView
        android:id="@+id/coR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/chance_of_rain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toTopOf="parent" />
    <Space
        android:id ="@+id/space3"
        android:layout_width="15dp"
        android:layout_height="match_parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="@+id/coR"
        app:layout_constraintStart_toEndOf="@+id/coR"
        tools:layout_editor_absoluteY="-73dp" />

    <TextView
        android:id="@+id/windspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_mph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id ="@+id/space4"
        android:layout_width="15dp"
        android:layout_height="match_parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="@+id/windspeed"
        app:layout_constraintStart_toEndOf="@+id/windspeed"
        tools:layout_editor_absoluteY="-73dp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humididty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space4"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>